After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683304 - gst-rtsp-server: transport might not be available in on_new_ssrc
gst-rtsp-server: transport might not be available in on_new_ssrc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
0.10.8
Other Linux
: Normal normal
: 0.10.9
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-04 00:30 UTC by Aleix Conchillo Flaqué
Modified: 2012-09-07 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp-media: also check for transports in on_ssrc_active (3.24 KB, patch)
2012-09-04 00:33 UTC, Aleix Conchillo Flaqué
none Details | Review

Description Aleix Conchillo Flaqué 2012-09-04 00:30:21 UTC
GstRTSPMediaStream transports might not be available in "on_new_ssrc". The transports are added in gst_rtsp_media_set_state when going to PLAYING state. However, "on_new_ssrc" might be called before this happens.
Comment 1 Aleix Conchillo Flaqué 2012-09-04 00:33:50 UTC
Created attachment 223389 [details] [review]
rtsp-media: also check for transports in on_ssrc_active
Comment 2 Wim Taymans 2012-09-07 14:46:02 UTC
commit bb3b2d377369f0aac77108b0e5205b0ac7bf8acb
Author: Aleix Conchillo Flaque <aleix@oblong.com>
Date:   Mon Sep 3 17:33:17 2012 -0700

    rtsp-media: also initialize transports in on_ssrc_active (bug #683304)
    
    * gst/rtsp-server/rtsp-media.c: GstRTSPMediaStream transports might not
      be available in "on_new_ssrc". The transports are added in
      gst_rtsp_media_set_state when going to PLAYING state. However,
      "on_new_ssrc" might be called before this happens.
    
      https://bugzilla.gnome.org/show_bug.cgi?id=683304